Add get tags and add tags to image calls to openapi
